sil.peg
// PEG.js Grammar for SIL (SNOBOL Implementation Language)
// (C) Copyright 2012 by Ori Livneh
// Released under GPL and MIT licenses

{
    var TYPE = 0, VALUE = 1,
        namespace = {};

    // Given a JavaScript AST representing some value, return a modified AST
    // representing an anonymous function that returns that value.
    var deferred = function (value) {
        return [ "function", null, [], [ [ "return", value ] ] ]
    }
}

program
  = statements:statement+ end
{
    var stack = [ "stack", [ "array", statements ] ],
        identifiers = [],
        declare = [ "var", identifiers ],
        i = 0;

    for ( name in namespace ) {
        identifiers.push([ name, [ "num", i ] ]);
        i = i + 100;
    }

    identifiers.push(stack);

    return [ "toplevel", [ declare ] ];
}


statement "statement"
  = comment2* 
    label:( name:name? { return name || [ "name", "null" ] } )
    blank
    oper:macro
    blank
    operands:operands
    blank?
    comment1?
    '\n'
{
    oper[TYPE] = "string";
    return [ "array", [ oper, operands, label ] ];
}


comment1 "trailing comment"
  = comment:[^\n]*
{
    return [ "comment1", comment.join('') ];
}

comment2 "multi-line comment"
  = lines:( '*' comment:[^\n]* '\n' { return comment.join(''); } )+
{
    return [ "comment2", lines.join('\n') ];
}

operands "operands"
  = head:variable tail:(',' variable)*
{
    var result = [head];
    for (var i = 0, max = tail.length; i < max; i++) {
        result.push(tail[i][1]);
    }
    return defer([ "array", result ]);
}

variable
  = list
  / literal
  / expr
  / name
  / integer
  / &(',') { return [ "name", "null" ]; }


expr "expression"
  = left:(integer / name) operator:[*+-] right:(integer / name)
{
    return [ "binary", operator, left, right ];
}

literal "literal"
  = "'" literal:[^']* "'"
{
    literal = literal.join('');
    return [ "string", literal ];
}

integer "integer"
  = digits:[0-9]+
{
    var num = parseInt(digits.join(''), 10);
    return [ "num", num ];
}

list "list operand"
  = '('
    head:variable
    tail:(',' v:variable { return v; })*
    ')'
{
    var result = [];

    if (head !== undefined || tail.length) {
        tail.unshift(head);
        result = tail;
    }

    return [ "array", result ];
}

blank
  = [\u0009\u0020]+


name "name"
  = head:[A-Z] tail:[A-Z0-9]*
{
    var name = head + tail.join('');

    namespace[name] = null;
    return [ "name", name ];
}

macro "macro"
  = head:[A-Z] tail:[A-Z0-9]*
{
    var macro = head + tail.join('');
    return [ "string", macro ];
}

end
  = blank 'END' (blank / '\n')* !.

/* vim: set ft=javascript: */
